--- a/package.json
+++ b/package.json
@@ -8,14 +8,24 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.16",
+    "@tailwindcss/typography": "^0.5.9",
+    "@vercel/python": "^3.1.57",
     "classnames": "2.3",
+    "clipboard-copy": "^4.0.1",
     "date-fns": "2.10.0",
+    "global": "^4.4.0",
     "gray-matter": "4.0.2",
+    "langchain": "*",
     "next": "latest",
+    "next-auth": "^4.20.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^8.0.7",
     "react-social-icons": "^5.4.0",
+    "react-syntax-highlighter": "^15.5.0",
     "remark": "11.0.2",
+    "remark-gfm": "^3.0.1",
     "remark-html": "10.0.0",
     "typescript": "^4.0.3"
   },
@@ -24,8 +34,9 @@
     "@types/node": "^14.0.1",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
+    "@types/react-syntax-highlighter": "^15.5.6",
     "postcss-preset-env": "^8",
-    "tailwindcss": "^1.4.0"
+    "tailwindcss": "*"
   },
   "license": "MIT"
 }
