--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "module": "esnext",
+    "target": "es2020",
+    "module": "nodenext",
     "jsx": "preserve",
     "strict": true,
     "esModuleInterop": true,
